Fixed the Collapse on iPhone

--- a/assets/themes/tibfib/css/core.css
+++ b/assets/themes/tibfib/css/core.css
@@ -14,6 +14,7 @@ h1 a,
 h1 a:hover {
 	color: rgb(51, 51, 51);
 }
+
 h6 {
 	margin-top: 0px;
 }
@@ -36,6 +37,12 @@ blockquote:hover {
 
 .pad-right {
 	padding-right: 9px;
+}
+
+a.noLinkStyles,
+a.noLinkStyles.hover {
+	color: rgb(51, 51, 51);
+	text-decoration: none;
 }
 
 /* 
